--- a/views/accounts/admin/posts/create-post.handlebars
+++ b/views/accounts/admin/posts/create-post.handlebars
@@ -49,7 +49,7 @@
                 <div class="form-group">
                     <div class="form-row">
                         <div class="col-md-6">
-                            <label for="exampleInputLastName">Imagery</label>
+                            <label for="exampleInputLastName">Cover image</label>
                             <input accept="image/*" name="file" class="form-control" id="inpFile" required validate type="file" aria-describedby="nameHelp" >
                         </div>
 
@@ -72,10 +72,10 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="allowComments">
-                    <input type="checkbox" name="allowComments"  id="allowComments">
-                    Allow Comments
-                    </label>
+                    <div class="col-md-6">
+                            <label for="exampleInputLastName">Featuring image</label>
+                            <input accept="image/*" name="multi_files" multiple class="form-control" id="inpFile" required validate type="file" aria-describedby="nameHelp" >
+                    </div>
                 </div>
 
                 <div class="form-group">
