--- a/views/accounts/admin/posts/index.handlebars
+++ b/views/accounts/admin/posts/index.handlebars
@@ -18,8 +18,8 @@
                     <th>Status</th>
                     <th>Category</th>
                     <th>Content</th>
-                    <th>Allow Comments</th>
                     <th>Imagery</th>
+                    <th>Featured Image</th>
                     <th>Date</th>
                     <th>Action</th>
                     </tr>
@@ -35,21 +35,24 @@
                     <td>{{status}}</td>
                     <td>{{category.title}}</td>
                     <td>{{body}}</td>
-                    <td>{{allowComments}}</td>
                     <td><img src="/uploads/{{file}}" width="100" alt=""></td>
+                    {{#foreach multi_files)}}
+                        <td><img src="/uploads/{{this}}" width="100" alt=""></td>
+                    {{/foreach}}
                     <td>{{generate_date date 'MMM-Do-Y'}} </td>
 
                     <td><a class="btn btn-success" href="/admin/posts/{{id}}/edit">Edit</a></td>
-                    <td><a class="btn btn-danger" href="/admin/posts/{{id}}/delete">Delete</a>
+                    {{!-- <td><a class="btn btn-danger" href="/admin/posts/{{id}}/delete">Delete</a> --}}
 
                     {{!-- <td><a class="btn btn-warning" href="/single_post/{{id}}">View</a></td> --}}
                     <td><a class="btn btn-warning" href="/single_post/{{slug}}">View</a></td>
 
 
-                    
-                    {{!-- <form action="/admin/posts/{{id}}/delete?_method=DELETE" method="POST">
+                    <td>
+                     <form action="/admin/posts/{{id}}/delete?_method=DELETE" method="POST">
                         <button type="submit" class="btn btn-danger">Delete</button>
-                    </form> --}}  
+                    </form> 
+                    </td>
                     {{!-- You can use the form for conventional delete request purposes or just use the link which initiates a get request --}}
 
                     
