--- a/views/accounts/admin/posts/create-post.handlebars
+++ b/views/accounts/admin/posts/create-post.handlebars
@@ -14,7 +14,7 @@
                     <div class="form-row">
                         <div class="col-md-6">
                             <label for="title">Title</label>
-                            <input name="title" class="form-control" id="title" required validate  type="text" aria-describedby="nameHelp" placeholder="Enter Post Title">
+                            <input name="title" class="form-control" id="title" required validate autofocus  type="text" aria-describedby="nameHelp" placeholder="Enter Post Title">
                         </div>
                         <div class="col-md-6">
                             <label for="sub">Sub-Title</label>
