--- a/views/accounts/admin/posts/edit.handlebars
+++ b/views/accounts/admin/posts/edit.handlebars
@@ -1,10 +1,6 @@
 <h3>Edit Post</h3>
 
 
-
-
-
-
 <div class="card ">
     <div class="card-header">Edit a post by filling this form....</div>
       <div class="card-body">
@@ -14,7 +10,7 @@
                     <div class="form-row">
                         <div class="col-md-6">
                             <label for="title">Title</label>
-                            <input name="title" value="{{post.title}}" class="form-control" id="title" required validate  type="text" aria-describedby="nameHelp" placeholder="Enter Post Title">
+                            <input name="title" value="{{post.title}}" class="form-control" id="title" required validate autofocus  type="text" aria-describedby="nameHelp" placeholder="Enter Post Title">
                         </div>
                         <div class="col-md-6">
                             <label for="sub">Sub-Title</label>
