--- a/views/accounts/admin/posts/edit.handlebars
+++ b/views/accounts/admin/posts/edit.handlebars
@@ -83,7 +83,7 @@
                 </div>
 
                 <div class="form-group">
-                    <button class="btn btn-primary" type="submit">Edit Post</button>
+                    <button class="btn btn-success" type="submit">Submit Edit</button>
                 </div>
 
             </form>
