--- a/views/accounts/admin/posts/index.handlebars
+++ b/views/accounts/admin/posts/index.handlebars
@@ -18,10 +18,10 @@
                     <th>Status</th>
                     <th>Category</th>
                     <th>Content</th>
-                    <th>Imagery</th>
-                    <th>Featured Image</th>
+                    <th>Imagery</th>        
                     <th>Date</th>
                     <th>Action</th>
+                     <th>Featured Image</th>
                     </tr>
                 </thead>
                 
@@ -29,34 +29,29 @@
                 {{#if posts}}    
                     {{#each posts}}
                         <tr>
-                        {{!-- <td>{{id}}</td> --}}
-                        <td>{{title}}</td>
-                        <td>{{sub}}</td>
-                        <td>{{user.fullname}}</td>
-                        <td>{{status}}</td>
-                        <td>{{category.title}}</td>
-                        <td>{{body}}</td>
-                        <td><img src="/uploads/{{file}}" width="100" alt=""></td>
-                        {{#foreach multi_files)}}
-                            <td><img src="/uploads/{{this}}" width="100" alt=""></td>
-                        {{/foreach}}
-                        <td>{{generate_date date 'MMM-Do-Y'}} </td>
+                            {{!-- <td>{{id}}</td> --}}
+                            <td>{{title}}</td>
+                            <td>{{sub}}</td>
+                            <td>{{user.fullname}}</td>
+                            <td>{{status}}</td>
+                            <td>{{category.title}}</td>
+                            <td>{{body}}</td>
+                            <td><img src="/uploads/{{file}}" width="100" alt=""></td>
+                            {{#each multi_files}}
+                                <td><img src="/uploads/{{this}}" width="60" alt=""></td>
+                            {{/each}}
+                            <td>{{generate_date date 'MMM-Do-Y'}} </td>
+                            <td><a class="btn btn-success" href="/admin/posts/{{id}}/edit">Edit</a></td>
+                            {{!-- <td><a class="btn btn-danger" href="/admin/posts/{{id}}/delete">Delete</a> --}}
 
-                        <td><a class="btn btn-success" href="/admin/posts/{{id}}/edit">Edit</a></td>
-                        {{!-- <td><a class="btn btn-danger" href="/admin/posts/{{id}}/delete">Delete</a> --}}
-
-                        {{!-- <td><a class="btn btn-warning" href="/single_post/{{id}}">View</a></td> --}}
-                        <td><a class="btn btn-warning" href="/single_post/{{slug}}">View</a></td>
-
-
-                        <td>
-                        <form action="/admin/posts/{{id}}/delete?_method=DELETE" method="POST">
-                            <button type="submit" class="btn btn-danger">Delete</button>
-                        </form> 
-                        </td>
-                        {{!-- You can use the form for conventional delete request purposes or just use the link which initiates a get request --}}
-
-                        
+                            {{!-- <td><a class="btn btn-warning" href="/single_post/{{id}}">View</a></td> --}}
+                            <td><a class="btn btn-warning" href="/single_post/{{slug}}">View</a></td>
+                            <td>
+                            <form action="/admin/posts/{{id}}/delete?_method=DELETE" method="POST">
+                                <button type="submit" class="btn btn-danger">Delete</button>
+                            </form> 
+                            </td>
+                            {{!-- You can use the form for conventional delete request purposes or just use the link which initiates a get request --}}                   
                         </tr>
 
                     {{/each}}
