--- a/views/layouts/admin.handlebars
+++ b/views/layouts/admin.handlebars
@@ -35,7 +35,7 @@
       </ol>
 
       <div class="row">
-        <div class="col-12">
+        <div class="col-12 p-4">
 
         {{{body}}}
               
