--- a/views/accounts/admin/contact/index.handlebars
+++ b/views/accounts/admin/contact/index.handlebars
@@ -1,3 +1,8 @@
+<h3>Contacts</h3>
+{{> admin/flash_msgs}}
+
+
+
 <form action="/admin/contact/multiaction" method="post" id="del_form">
 
 <div class="form-group multi_action col-md-4">
