--- a/views/accounts/admin/posts/index.handlebars
+++ b/views/accounts/admin/posts/index.handlebars
@@ -18,10 +18,10 @@
                     <th>Status</th>
                     <th>Category</th>
                     <th>Content</th>
-                    <th>Imagery</th>        
+                    <th>Imagery</th>      
+                     <th>Featured Images</th>
                     <th>Date</th>
                     <th>Action</th>
-                     <th>Featured Image</th>
                     </tr>
                 </thead>
                 
