Log handling -registration|bcryptjs-

--- a/views/home/logs.handlebars
+++ b/views/home/logs.handlebars
@@ -24,7 +24,7 @@
 
             <div class="form-group">
                 <div class="input-group">
-                    <input class="form-control" placeholder="*******" name="pass" type="password" required>
+                    <input class="form-control" placeholder="*******" name="password" type="password" required>
 
                     <div class="input-group-prepend">
                         <span class="input-group-text foot-link"><span class="fa fa-key"></span>
@@ -36,11 +36,11 @@
 
             <div class="form-group">
                 <div class="row">
-                    <div class="col-md-6 col-sm-6 col-4">
+                    <div class="col-md-6 col-sm-6 col-6">
                         <button type="submit" class="btn btn-success btn-block"> <i class="fa fa-user"></i> Sign in </button>
                     </div>
 
-                    <div class="col-md-6 col-sm-6 col-8">
+                    <div class="col-md-6 col-sm-6 col-6">
                         <a href="" class="btn btn-primary btn-block"><i class="fa fa-facebook"></i> Sign in</a>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
 
                 <div class="form-group">
                     <div class="input-group">
-                        <input class="form-control" placeholder="+234..." name="phone" type="text" required>
+                        <input class="form-control" placeholder="+234..." name="phone" type="text" required="">
 
                         <div class="input-group-prepend">
                             <span class="input-group-text foot-link"><span class="fa fa-phone"></span>
@@ -87,7 +87,7 @@
 
                 <div class="form-group">
                     <div class="input-group">
-                        <input class="form-control" placeholder="*******" name="pass" type="password" required>
+                        <input class="form-control" placeholder="*******" name="password" type="password" required="">
 
                         <div class="input-group-prepend">
                             <span class="input-group-text foot-link"><span class="fa fa-key"></span>
@@ -98,12 +98,12 @@
 
                 <div class="form-group">
                     <div class="row">
-                        <div class="col-md-6 col-sm-6 col-4">
+                        <div class="col-md-6 col-sm-6 col-6">
                             <button type="submit" class="btn btn-success btn-block "> <i class="fa fa-plus"></i> Sign up</button>
 
                         </div>
 
-                        <div class="col-md-6 col-sm-6 col-8">
+                        <div class="col-md-6 col-sm-6 col-6">
                             <a href="" class="btn btn-primary btn-block"><i class="fa fa-facebook"></i> Sign up</a>
                         </div>
                     </div>
